--- a/1. Tipos de documentos/1. Comandos básicos.tex
+++ b/1. Tipos de documentos/1. Comandos básicos.tex
@@ -12,6 +12,9 @@
 %\usepackage [spanish, english] {babel} % Ambos.
 \usepackage{color} % Usar colores en las letras
 
+%\usepackage[T1]{fontenc} % Para el tipo de letra en todo el documento
+%\usepackage{chancery}
+
 %============= DATOS DEL DOCUMENTO ===============%
 \title{Ejemplo de un artículo sencillo en Latex}
 \author{Luis Enrique Hernández Tapia}
@@ -58,7 +61,7 @@ estaban los cuatro hijos \hrulefill idiotas del matrimonio MazziniFerraz.\\
 Tenían la lengua \dotfill entre los labios,
 
 
-\section{Formato de texto}
+\section{Justificación de líneas}
 
 Todo el día, sentados en el patio, en un banco estaban los cuatro
 hijos \\
